tests/NormalTests/paczka1/fuzzy1/56967466.err
Error in line 2: tc0jDU8 A500 28,9
Error in line 15: fah A507 32,4
Error in line 25: LqQ A507 45,2
Error in line 26: tc0jDU8 A507 120,2
